--- a/src/app/crud-table/dynamic-form/dynamic-form-input.component.html
+++ b/src/app/crud-table/dynamic-form/dynamic-form-input.component.html
@@ -2,13 +2,13 @@
     <label [attr.for]="input.key">{{input.header}}</label>
 
     <div [ngSwitch]="input.controlType">
-        <input *ngSwitchCase="'textbox'" class="form-control" [formControlName]="input.key" [id]="input.key" [type]="input.type">
+        <input *ngSwitchCase="'textbox'" class="form-control" [formControlName]="input.key" [id]="input.key" [type]="input.type" [ngStyle]="input.style">
         
-        <textarea *ngSwitchCase="'textarea'" class="form-control" [formControlName]="input.key" [id]="input.key" [cols]="input.cols"
+        <textarea *ngSwitchCase="'textarea'" class="form-control" [formControlName]="input.key" [id]="input.key" [cols]="input.cols" [ngStyle]="input.style"
             [rows]="input.rows"></textarea>
 
         <div *ngSwitchCase="'dropdown'">
-            <ng-select *ngIf="input.linkedObject" [items]="input['allValues']" [multiple]="input['multipleSelect']" [closeOnSelect]="false"
+            <ng-select *ngIf="input.linkedObject" [items]="input['allValues']" [multiple]="input['multipleSelect']" [closeOnSelect]="false" [ngStyle]="input.style"
                 [searchable]="false" [bindLabel]="input.linkedData['value']" placeholder="Select ..." [formControlName]="input.key">
             </ng-select>
 
@@ -16,18 +16,18 @@
                 <option *ngFor="let opt of input['options']" [value]="opt.key">{{opt.value}}</option>
             </select>
         </div>
-        <p-calendar *ngSwitchCase="'calendar'" [formControlName]="input.key" dateFormat="yy-mm-dd" [showIcon]="true"></p-calendar>
+        <p-calendar *ngSwitchCase="'calendar'" [formControlName]="input.key" dateFormat="yy-mm-dd" [showIcon]="true" [ngStyle]="input.style"></p-calendar>
 
         <div *ngSwitchCase="'radio'">
             <div *ngFor="let opt of input['options']" class="form-check form-check-inline">
                 <input [id]="input.key" value="{{opt.key}}" [formControlName]="input.key" class="form-check-input"
-                    [type]="'radio'" [checked]="input.value == opt.key">
-                <span class="form-check-label">{{opt.value}}</span>
+                    [type]="'radio'" [checked]="input.value == opt.key" [ngStyle]="input.style">
+                <span class="form-check-label" [ngStyle]="input.style">{{opt.value}}</span>
             </div>
         </div>
 
         <div *ngSwitchCase="'checkbox'">
-            <input [id]="input.key" [formControlName]="input.key" class="form-control" type="checkbox">
+            <input [id]="input.key" [formControlName]="input.key" class="form-control" type="checkbox" [ngStyle]="input.style">
         </div>
     </div>
 
