Add logout button to AdministrationComponent

--- a/src/app/administration/administration.component.html
+++ b/src/app/administration/administration.component.html
@@ -36,6 +36,9 @@
             </label>
           </div>
         </ul>
+        <div class="float-right">
+            <button class="btn btn-sm btn-primary" (click)="onLogoutClicked()">Logout</button>
+        </div>
       </div>
     </nav>
     
