--- a/src/app/crud-table/modal-form/modal-form.component.html
+++ b/src/app/crud-table/modal-form/modal-form.component.html
@@ -11,5 +11,6 @@
 </div>
 <div class="modal-footer">
   <button *ngIf="!isNewModel" type="button" class="btn btn-outline-danger" [disabled]="!canDeleteEntity()" (click)="delete()">Delete</button>
-  <button type="button" class="btn btn-outline-primary" (click)="save()" [disabled]="!formComponent.getPayload() || !canUpdateEntity()" autofocus>{{isNewModel ? 'Save' : 'Edit'}}</button>
+  <button *ngIf="!isNewModel" type="button" class="btn btn-outline-primary" (click)="save()" [disabled]="!formComponent.getPayload() || !canUpdateEntity()" autofocus>Edit</button>
+  <button *ngIf="isNewModel" type="button" class="btn btn-outline-primary" (click)="save()" [disabled]="!formComponent.getPayload() || !canCreateEntity()" autofocus>Save</button>
 </div>
