--- a/src/app/administration/administration.component.html
+++ b/src/app/administration/administration.component.html
@@ -1,68 +1,98 @@
 <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Admininstration</a>
-      <button class="navbar-toggler" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" data-toggle="collapse"
-        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-  
-      <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <div class="btn-group btn-group-toggle" ngbRadioGroup [(ngModel)]="currentSelection">
-            <label *ngIf="canReadEntity(projectFormPermissions)" ngbButtonLabel class="btn-outline-primary btn-sm">
-              <input ngbButton type="radio" value="project">Project
-            </label>
-            <label *ngIf="canReadEntity(productFormPermissions)" ngbButtonLabel class="btn-outline-primary btn-sm">
-              <input ngbButton type="radio" value="product">Product
-            </label>
-            <label *ngIf="canReadEntity(userFormPermissions)" ngbButtonLabel class="btn-outline-primary btn-sm">
-              <input ngbButton type="radio" value="user">User
-            </label>
-            <label *ngIf="canReadEntity(taskFormPermissions)" ngbButtonLabel class="btn-outline-primary btn-sm">
-              <input ngbButton type="radio" value="task">Task
-            </label>
-            <label *ngIf="canReadEntity(taskItemFormPermissions)" ngbButtonLabel class="btn-outline-primary btn-sm">
-              <input ngbButton type="radio" value="taskitem">Task item
-            </label>
-            <label ngbButtonLabel class="btn-outline-primary btn-sm">
-              <input ngbButton type="radio" value="erdiagram">ER Diagram
-            </label>
-            <label *ngIf="canReadEntity(scheduleFormPermissions)" ngbButtonLabel class="btn-outline-primary btn-sm">
-                <input ngbButton type="radio" value="schedule">Schedule
-            </label>
-            <label *ngIf="canReadEntity(scheduleFormPermissions)" ngbButtonLabel class="btn-outline-primary btn-sm">
-              <input ngbButton type="radio" value="gantt">Gantt Diagram
-            </label>
-          </div>
-        </ul>
-        <div class="float-right">
-            <button class="btn btn-sm btn-primary" (click)="onLogoutClicked()">Logout</button>
-        </div>
-      </div>
-    </nav>
-    
-    <app-crud-table *ngIf="currentSelection == 'project'" [entityName]="'projects'" [formElements]="projectFormElements" [formPermissions]="projectFormPermissions"
-      (rowSelect)="projectSelected($event)" [itemsPerPage]="5" [filter]="projectFilter" (backClicked)="goBack()"></app-crud-table>
-    <h1></h1>
-    <app-crud-table *ngIf="currentSelection == 'product'" [entityName]="'products'" [formElements]="productFormElements" [formPermissions]="productFormPermissions"
-      [itemsPerPage]="5" [filter]="productFilter" (cellSelect)="productCellSelected($event)" (backClicked)="goBack()"></app-crud-table>
-    <h1></h1>
-    <app-crud-table *ngIf="currentSelection == 'user'" [entityName]="'users'" [formElements]="userFormElements" [formPermissions]="userFormPermissions"
-      [itemsPerPage]="5" [filter]="userFilter" (cellSelect)="userCellSelected($event)" (backClicked)="goBack()"></app-crud-table>
-    <h1></h1>
-    <app-crud-table *ngIf="currentSelection == 'task'" [entityName]="'tasks'" [formElements]="taskFormElements" [formPermissions]="taskFormPermissions" 
-    [filter]="taskFilter" [itemsPerPage]="5" (cellSelect)="taskCellSelected($event)" (backClicked)="goBack()"></app-crud-table>
-    <h1></h1>
-    <app-crud-table *ngIf="currentSelection == 'taskitem'" [entityName]="'taskitems'" [formPermissions]="taskItemFormPermissions" [filter]="taskItemFilter" 
-      [formElements]="taskItemFormElements" [itemsPerPage]="5" (backClicked)="goBack()"></app-crud-table>
-  
-    <app-typeorm-erd *ngIf="currentSelection == 'erdiagram'" [entities]="allEntities"></app-typeorm-erd>
-  
-    <app-crud-table *ngIf="currentSelection == 'schedule'" [entityName]="'schedules'" [filter]="''"
-    [formElements]="scheduleFormElements" [formPermissions]="scheduleFormPermissions" [itemsPerPage]="5" (rowSelect)="showScheudule($event)" (backClicked)="goBack()"></app-crud-table>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Admininstration</a>
+    <button class="navbar-toggler" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" data-toggle="collapse"
+      data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+      aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-    <app-gantt-chart *ngIf="currentSelection == 'gantt'" [entities]="ganttEntities"></app-gantt-chart>
-    
-    <nav class="navbar navbar-expand-lg navbar-light bg-light"></nav>
-  </div>
+    <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <div class="btn-group btn-group-toggle" ngbRadioGroup [(ngModel)]="currentSelection">
+          <label *ngIf="canReadEntity(projectFormPermissions)" ngbButtonLabel class="btn-outline-primary btn-sm">
+            <input ngbButton type="radio" value="project">Project
+          </label>
+          <label *ngIf="canReadEntity(productFormPermissions)" ngbButtonLabel class="btn-outline-primary btn-sm">
+            <input ngbButton type="radio" value="product">Product
+          </label>
+          <label *ngIf="canReadEntity(userFormPermissions)" ngbButtonLabel class="btn-outline-primary btn-sm">
+            <input ngbButton type="radio" value="user">User
+          </label>
+          <label *ngIf="canReadEntity(taskFormPermissions)" ngbButtonLabel class="btn-outline-primary btn-sm">
+            <input ngbButton type="radio" value="task">Task
+          </label>
+          <label *ngIf="canReadEntity(taskItemFormPermissions)" ngbButtonLabel class="btn-outline-primary btn-sm">
+            <input ngbButton type="radio" value="taskitem">Task item
+          </label>
+          <label ngbButtonLabel class="btn-outline-primary btn-sm">
+            <input ngbButton type="radio" value="erdiagram">ER Diagram
+          </label>
+          <label *ngIf="canReadEntity(scheduleFormPermissions)" ngbButtonLabel class="btn-outline-primary btn-sm">
+            <input ngbButton type="radio" value="jobeditor">Job Editor
+          </label>
+          <label *ngIf="canReadEntity(scheduleFormPermissions)" ngbButtonLabel class="btn-outline-primary btn-sm">
+            <input ngbButton type="radio" value="schedule">Schedule
+          </label>
+          <label *ngIf="canReadEntity(scheduleFormPermissions)" ngbButtonLabel class="btn-outline-primary btn-sm">
+            <input ngbButton type="radio" value="gantt">Gantt Diagram
+          </label>
+        </div>
+      </ul>
+      <div class="float-right">
+        <button class="btn btn-sm btn-primary" (click)="onLogoutClicked()">Logout</button>
+      </div>
+    </div>
+  </nav>
+
+  <h1></h1>
+
+  <p-card *ngIf="currentSelection == 'project'">
+    <app-crud-table [entityName]="'projects'" [formElements]="projectFormElements"
+      [formPermissions]="projectFormPermissions" (rowSelect)="projectSelected($event)" [itemsPerPage]="5"
+      [filter]="projectFilter" (backClicked)="goBack()"></app-crud-table>
+  </p-card>
+
+  <p-card *ngIf="currentSelection == 'product'">
+    <app-crud-table [entityName]="'products'" [formElements]="productFormElements"
+      [formPermissions]="productFormPermissions" [itemsPerPage]="5" [filter]="productFilter"
+      (cellSelect)="productCellSelected($event)" (backClicked)="goBack()"></app-crud-table>
+  </p-card>
+
+  <p-card *ngIf="currentSelection == 'user'">
+    <app-crud-table [entityName]="'users'" [formElements]="userFormElements" [formPermissions]="userFormPermissions"
+      [itemsPerPage]="5" [filter]="userFilter" (cellSelect)="userCellSelected($event)" (backClicked)="goBack()">
+    </app-crud-table>
+  </p-card>
+
+  <p-card *ngIf="currentSelection == 'task'">
+    <app-crud-table [entityName]="'tasks'" [formElements]="taskFormElements" [formPermissions]="taskFormPermissions"
+      [filter]="taskFilter" [itemsPerPage]="5" (cellSelect)="taskCellSelected($event)" (backClicked)="goBack()">
+    </app-crud-table>
+  </p-card>
+
+  <p-card *ngIf="currentSelection == 'taskitem'">
+    <app-crud-table [entityName]="'taskitems'" [formElements]="taskItemFormElements"
+      [formPermissions]="taskItemFormPermissions" [filter]="taskItemFilter" [itemsPerPage]="5" (backClicked)="goBack()">
+    </app-crud-table>
+  </p-card>
+
+  <p-card *ngIf="currentSelection == 'erdiagram'">
+    <app-typeorm-erd [entities]="allEntities"></app-typeorm-erd>
+  </p-card>
+
+  <p-card *ngIf="currentSelection == 'schedule'">
+    <app-crud-table [entityName]="'schedules'" [filter]="''" [formElements]="scheduleFormElements"
+      [formPermissions]="scheduleFormPermissions" [itemsPerPage]="5" (rowSelect)="showScheudule($event)"
+      (backClicked)="goBack()"></app-crud-table>
+  </p-card>
+
+  <p-card *ngIf="currentSelection == 'gantt'">
+    <app-gantt-chart [entities]="ganttEntities"></app-gantt-chart>
+  </p-card>
+
+  <p-card *ngIf="currentSelection == 'jobeditor'" header="Job Editor">
+    <app-job-editor [entity]="ganttEntities[0]"></app-job-editor>
+  </p-card>
+
+</div>
