job editor and chart.js integration

--- a/src/app/gantt-chart/job-editor/job-editor.component.html
+++ b/src/app/gantt-chart/job-editor/job-editor.component.html
@@ -1,5 +1,6 @@
+<div class="h5">Job editor</div>
 <div class="d-flex">
-  <p-pickList [source]="availableJobs" [target]="entity.jobs" filterBy="name,piecetype,dueDate" [responsive]="true"
+  <p-pickList [source]="availableJobs" [target]="targetJobs" filterBy="name,piecetype,dueDate" [responsive]="true"
     sourceHeader="All Jobs" targetHeader="Scheduled Jobs" dragdrop="true" [sourceStyle]="{'height':'300px'}"
     [targetStyle]="{'height':'300px'}">
     <ng-template let-job pTemplate="item">
@@ -13,15 +14,15 @@
 
 <div class="h5">Objective priorities</div>
 <small>Makespan {{makespan}}%</small>
-<p-slider class="m-2" [(ngModel)]="makespan" [min]="0" [max]="100"></p-slider>
+<p-slider class="m-2" [(ngModel)]="makespan" [min]="0" [max]="100" [style]="{'background-color': '#3cb44b'}"></p-slider>
 
 <h2></h2>
 <small>Number of Setups {{setups}}%</small>
-<p-slider class="m-2" [(ngModel)]="setups" [min]="0" [max]="100"></p-slider>
+<p-slider class="m-2" [(ngModel)]="setups" [min]="0" [max]="100" [style]="{'background-color': '#ffe119'}"></p-slider>
 
 <h2></h2>
 <small>Setup time {{setupTime}}%</small>
-<p-slider class="m-2" [(ngModel)]="setupTime" [min]="0" [max]="100"></p-slider>
+<p-slider class="m-2" [(ngModel)]="setupTime" [min]="0" [max]="100" [style]="{'background-color': '#4363d8'}"></p-slider>
 
 <div class="d-flex align-items-center">
   <div>Scheduling description:</div>
@@ -30,5 +31,8 @@
   <input type="number" class="m-2" style="width:50px" [(ngModel)]="population">
   <div>Iterations:</div>
   <input type="number" class="m-2" style="width:50px" [(ngModel)]="iteration">
-  <button type="button" class="btn btn-sm btn-outline-success" (click)="reschedule()">Optimize scheduling</button>
+  <button type="button" class="btn btn-sm btn-outline-success m-2" (click)="reschedule()">Optimize scheduling</button>
+  <button type="button" class="btn btn-sm btn-outline-success" (click)="save()">Save</button>
 </div>
+
+<p-chart type="line" [data]="data" *ngIf="data"></p-chart>
