--- a/src/app/administration/administration.component.html
+++ b/src/app/administration/administration.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #dae8ef; border-radius: 5px;">
     <a class="navbar-brand" href="#">Admininstration</a>
     <button class="navbar-toggler" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" data-toggle="collapse"
       data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -40,7 +40,9 @@
         </div>
       </ul>
       <div class="float-right">
-        <button class="btn btn-sm btn-primary" (click)="onLogoutClicked()">Logout</button>
+        <button class="btn btn-sm btn-outline-primary" (click)="onLogoutClicked()">Logout
+          <span class="pi pi-sign-out align-middle" aria-hidden="true"></span>
+        </button>
       </div>
     </div>
   </nav>
@@ -91,8 +93,8 @@
     <app-gantt-chart [entities]="ganttEntities"></app-gantt-chart>
   </p-card>
 
-  <p-card *ngIf="currentSelection == 'jobeditor'" header="Job Editor">
-    <app-job-editor [entity]="ganttEntities[0]"></app-job-editor>
+  <p-card *ngIf="currentSelection == 'jobeditor'">
+    <app-job-editor></app-job-editor>
   </p-card>
 
 </div>
