--- a/src/app/crud-table/crud-table.component.html
+++ b/src/app/crud-table/crud-table.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-between p-2">
   <div>
-    <button class="form-control btn btn-outline-success" type="button" aria-label="Search"
-      (click)="backClicked.emit()"><span class="pi pi-angle-double-left"></span></button>
+    <button class="form-control btn btn-sm btn-outline-success" type="button" aria-label="Search"
+      (click)="backClicked.emit()"><span class="pi pi-arrow-left align-middle"></span></button>
   </div>
   <div class="form-inline">
     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"
@@ -55,8 +55,14 @@
 
         </td>
       </ng-container>
-      <td align="right"><button type="button" class="btn btn-outline-primary" (click)="editRow(dataRow)"><span
-            class="pi pi-pencil"></span></button></td>
+      <td align="right">
+        <div class="d-flex justify-content-end">
+          <button type="button" class="btn btn-outline-primary mr-1 btn-sm" (click)="editRow(dataRow)"><span
+              class="pi pi-pencil"></span></button>
+          <button type="button" class="btn btn-outline-danger mr-1 btn-sm" (click)="deleteRow(dataRow)"><span
+              class="pi pi-trash"></span></button>
+        </div>
+      </td>
     </tr>
   </tbody>
 </table>
@@ -67,7 +73,8 @@
     <small *ngIf="searchFilter">(filtered from {{allEntities}} entries)</small>
   </div>
   <button type="button" class="btn btn-outline-primary align-self-start m-2" (click)="showAll()">Show all</button>
-  <button type="button" class="btn btn-outline-primary align-self-start m-2" (click)="add()" [disabled]="!canCreateEntity()">Add</button>
+  <button type="button" class="btn btn-outline-primary align-self-start m-2" (click)="add()"
+    [disabled]="!canCreateEntity()">Add</button>
   <ngb-pagination class="m-2" [collectionSize]="currentEntities" [(page)]="page" [pageSize]="itemsPerPage">
   </ngb-pagination>
 </div>
