--- a/src/app/gantt-chart/edit-schedule/edit-schedule.component.html
+++ b/src/app/gantt-chart/edit-schedule/edit-schedule.component.html
@@ -1,15 +1,41 @@
-<div class="d-flex">
-  <p-listbox [options]="jobs" (click)="selectJob()" [(ngModel)]="clickedJob" filter="filter" optionLabel="name"
-    [listStyle]="{'min-height':'150px','max-height':'150px','font-size':'0.8em'}"></p-listbox>
-  <div class="list-group align-self-center m-1" *ngFor="let ops of route; let i = index">
-    <li class="list-group-item list-group-item-action" *ngFor="let op of ops"
-      [ngClass]="{'active': selectedOperation[i] == op}" (click)="selectOperation(op,i)">{{op[0] + ' (' + op[1] + ')'}}
-    </li>
-  </div>
-</div>
-
-<div class="d-flex align-items-center">
-  <small>StartTime:</small>
-  <input type="number" class="m-1" style="width:50px" [(ngModel)]="startTime">
-  <button type="button" class="btn btn-sm btn-outline-success" (click)="setStartTime()">Set</button>
-</div>
+<p-table id="jobEditorTable" #dt [columns]="jobCols" [value]="jobs" dataKey="name" selectionMode="single"
+  [(selection)]="selectedJob" [paginator]="true" [rows]="5">
+  <ng-template pTemplate="header" let-columns>
+    <tr>
+      <th style="width: 3em"></th>
+      <th *ngFor="let col of columns">
+        {{col.header}}
+      </th>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-rowData let-expanded="expanded" let-columns="columns">
+    <tr [pSelectableRow]="rowData" (click)="rowSelect.emit({name: rowData.name, jobs: jobs}); selectJob(rowData)">
+      <td>
+        <a href="#" [pRowToggler]="rowData" (click)="selectJob(rowData)">
+          <i [ngClass]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></i>
+        </a>
+      </td>
+      <td *ngFor="let col of columns">
+        {{rowData[col.field]}}
+      </td>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="rowexpansion" let-rowData let-columns="columns">
+    <tr>
+      <td [attr.colspan]="columns.length + 1">
+        <div class="ui-g ui-fluid">
+          <div class="list-group align-self-center m-1" *ngFor="let ops of rowData.route.route; let i = index">
+            <li class="list-group-item list-group-item-action" *ngFor="let op of ops"
+              [ngClass]="{'active': rowData.selectedOperation[i] == op}" (click)="selectOperation(rowData, op, i)">
+              {{op[0] + ' (' + op[1] + ')'}}
+            </li>
+          </div>
+        </div>
+        <div class="align-items-center">
+          <small>Start time: </small>
+          <input type="number" class="m-1" style="width:50px" [(ngModel)]="rowData.startTime">
+        </div>
+      </td>
+    </tr>
+  </ng-template>
+</p-table>
