--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
       </p-header>
       <div class="d-flex flex-column justify-content-center align-items-center">
         <h3>TimeSolware</h3>
-        <h4 class="align-self-center">Manufacturing Execution Simulation</h4>
+        <h4 class="align-self-center">Manufacturing Execution Planning & Simulation</h4>
       </div>
       <div class="row">
         <div class="col-4 offset-4">
