--- a/src/app/crud-table/crud-table.component.html
+++ b/src/app/crud-table/crud-table.component.html
@@ -64,7 +64,7 @@
         <div class="d-flex justify-content-end">
           <button type="button" class="btn btn-outline-primary mr-1 btn-sm" (click)="editRow(dataRow)"><span
               class="pi pi-pencil"></span></button>
-          <button type="button" class="btn btn-outline-danger mr-1 btn-sm" (click)="deleteRow(dataRow)"><span
+          <button type="button" class="btn btn-outline-danger mr-1 btn-sm" (click)="confirmThenDelete(dataRow)"><span
               class="pi pi-trash"></span></button>
         </div>
       </td>
@@ -77,9 +77,15 @@
     <small>Showing {{firstEntity + 1}} to {{lastEntity}} of {{currentEntities}} </small>
     <small *ngIf="searchFilter">(filtered from {{allEntities}} entries)</small>
   </div>
+
   <button type="button" class="btn btn-outline-primary align-self-start m-2" (click)="showAll()">Show all</button>
+
   <button type="button" class="btn btn-outline-primary align-self-start m-2" (click)="add()"
     [disabled]="!canCreateEntity()">Add</button>
-  <ngb-pagination class="m-2" [collectionSize]="currentEntities" [(page)]="page" [pageSize]="itemsPerPage">
-  </ngb-pagination>
+
+  <ngb-pagination class="m-2" [collectionSize]="currentEntities" [(page)]="page" [pageSize]="itemsPerPage"></ngb-pagination>
+</div>
+
+<div class="confirmation">
+    <p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>
 </div>
