--- a/src/app/crud-table/crud-table.component.html
+++ b/src/app/crud-table/crud-table.component.html
@@ -89,3 +89,7 @@
 <div class="confirmation">
     <p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>
 </div>
+
+<div class="toast-message">
+    <p-toast></p-toast>
+</div>
