--- a/src/app/crud-table/crud-table.component.html
+++ b/src/app/crud-table/crud-table.component.html
@@ -1,78 +1,80 @@
 <div class="d-flex justify-content-between p-2">
   <div>
-    <button class="btn btn-sm btn-outline-success" type="button" aria-label="Search"
-      (click)="backClicked.emit()"><span class="pi pi-arrow-left align-middle"></span></button>
+    <button class="btn btn-sm btn-outline-success" type="button" aria-label="Search" (click)="backClicked.emit()"><span
+        class="pi pi-arrow-left align-middle"></span></button>
   </div>
-  
+
   <div class="form-inline">
     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"
       [(ngModel)]="searchFilter">
   </div>
 </div>
 
-<table class="table table-striped table-sm">
-  <thead>
-    <tr>
-      <ng-container *ngFor="let col of formElements">
-        <th scope="col" *ngIf="!col.hidden">{{col.header}}</th>
-      </ng-container>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let dataRow of tableData">
-      <ng-container *ngFor="let col of formElements">
-        <td scope="row" class="align-middle" *ngIf="!col.hidden" (click)="rowSelect.emit(dataRow)">
-          <div *ngIf="!col.linkedObject">
+<div class="table-responsive">
+  <table class="table table-striped table-sm">
+    <thead>
+      <tr>
+        <ng-container *ngFor="let col of formElements">
+          <th scope="col" *ngIf="!col.hidden">{{col.header}}</th>
+        </ng-container>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let dataRow of tableData">
+        <ng-container *ngFor="let col of formElements">
+          <td scope="row" class="align-middle" *ngIf="!col.hidden" (click)="rowSelect.emit(dataRow)">
+            <div *ngIf="!col.linkedObject">
 
-            <div [ngSwitch]="col.controlType">
-              <div *ngSwitchCase="'checkbox'">
-                <i *ngIf="dataRow[col.key]" class="pi pi-check text-success"></i>
-                <i *ngIf="!dataRow[col.key]" class="pi pi-times text-danger"></i>
-              </div>
+              <div [ngSwitch]="col.controlType">
+                <div *ngSwitchCase="'checkbox'">
+                  <i *ngIf="dataRow[col.key]" class="pi pi-check text-success"></i>
+                  <i *ngIf="!dataRow[col.key]" class="pi pi-times text-danger"></i>
+                </div>
 
-              <div *ngSwitchCase="'file'" class="text-center">
-                <img class="w-25" [src]="dataRow[col.key]" (click)="openModalImg(dataRow[col.key])">
-              </div>  
-              
-              <div *ngSwitchDefault [ngSwitch]="col.controlType">
-                <!-- textareas will be displayed with small font-->
-                <small *ngSwitchCase="'textarea'">{{truncate(dataRow[col.key])}}</small>
-                <!-- all other cell values-->
+                <div *ngSwitchCase="'file'" class="text-center">
+                  <img class="w-25" [src]="dataRow[col.key]" (click)="openModalImg(dataRow[col.key])">
+                </div>
 
-                <div *ngSwitchDefault>
-                  <ngb-highlight *ngIf="col.type != 'password'" [result]="dataRow[col.key]" [term]="searchFilter">
-                  </ngb-highlight>
+                <div *ngSwitchDefault [ngSwitch]="col.controlType">
+                  <!-- textareas will be displayed with small font-->
+                  <small *ngSwitchCase="'textarea'">{{truncate(dataRow[col.key])}}</small>
+                  <!-- all other cell values-->
+
+                  <div *ngSwitchDefault>
+                    <ngb-highlight *ngIf="col.type != 'password'" [result]="dataRow[col.key]" [term]="searchFilter">
+                    </ngb-highlight>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
 
-          <div *ngIf="col.linkedObject && col.multipleSelect">
-            <span *ngFor="let val of dataRow[col.linkedObject]" class="badge badge-success m-1"
-              (click)="cellSelect.emit({col:col.linkedData, data:val[col.linkedData.value]})" appClickStopPropagation>
-              {{val[col.linkedData.value]}}</span>
-          </div>
-          <div *ngIf="col.linkedObject && !col.multipleSelect">
-            <span class="badge badge-success m-1"
-              (click)="cellSelect.emit({col:col.linkedData, data: dataRow[singleName(col.linkedObject)][col.linkedData.value]})"
-              appClickStopPropagation>
-              {{dataRow[singleName(col.linkedObject)][col.linkedData.value]}}</span>
-          </div>
+            <div *ngIf="col.linkedObject && col.multipleSelect">
+              <span *ngFor="let val of dataRow[col.linkedObject]" class="badge badge-success m-1"
+                (click)="cellSelect.emit({col:col.linkedData, data:val[col.linkedData.value]})" appClickStopPropagation>
+                {{val[col.linkedData.value]}}</span>
+            </div>
+            <div *ngIf="col.linkedObject && !col.multipleSelect">
+              <span class="badge badge-success m-1"
+                (click)="cellSelect.emit({col:col.linkedData, data: dataRow[singleName(col.linkedObject)][col.linkedData.value]})"
+                appClickStopPropagation>
+                {{dataRow[singleName(col.linkedObject)][col.linkedData.value]}}</span>
+            </div>
 
+          </td>
+        </ng-container>
+        <td align="right">
+          <div class="d-flex justify-content-end">
+            <button type="button" class="btn btn-outline-primary mr-1 btn-sm" (click)="editRow(dataRow)"><span
+                class="pi pi-pencil"></span></button>
+            <button type="button" class="btn btn-outline-danger mr-1 btn-sm" (click)="confirmThenDelete(dataRow)"><span
+                class="pi pi-trash"></span></button>
+          </div>
         </td>
-      </ng-container>
-      <td align="right">
-        <div class="d-flex justify-content-end">
-          <button type="button" class="btn btn-outline-primary mr-1 btn-sm" (click)="editRow(dataRow)"><span
-              class="pi pi-pencil"></span></button>
-          <button type="button" class="btn btn-outline-danger mr-1 btn-sm" (click)="confirmThenDelete(dataRow)"><span
-              class="pi pi-trash"></span></button>
-        </div>
-      </td>
-    </tr>
-  </tbody>
-</table>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
 <div class="d-flex justify-content-between p-2">
   <div class="mr-auto">
@@ -80,19 +82,21 @@
     <small *ngIf="searchFilter">(filtered from {{allEntities}} entries)</small>
   </div>
 
-  <button type="button" class="btn btn-outline-primary btn-sm align-self-start m-2" (click)="showAll()">Show all</button>
-  
+  <button type="button" class="btn btn-outline-primary btn-sm align-self-start m-2" (click)="showAll()">Show
+    all</button>
+
   <button type="button" class="btn btn-outline-primary btn-sm align-self-start m-2" (click)="add()"
     [disabled]="!canCreateEntity()">Add</button>
-  
-  <ngb-pagination class="m-2 pagination-sm" [collectionSize]="currentEntities" [(page)]="page" [pageSize]="itemsPerPage">
+
+  <ngb-pagination class="m-2 pagination-sm" [collectionSize]="currentEntities" [(page)]="page"
+    [pageSize]="itemsPerPage">
   </ngb-pagination>
 </div>
 
 <div class="confirmation">
-    <p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>
+  <p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>
 </div>
 
 <div class="toast-message">
-    <p-toast></p-toast>
+  <p-toast></p-toast>
 </div>
