--- a/src/app/crud-table/dynamic-form/dynamic-form-input.component.html
+++ b/src/app/crud-table/dynamic-form/dynamic-form-input.component.html
@@ -2,7 +2,7 @@
     <label [attr.for]="input.key">{{input.header}}</label>
 
     <div [ngSwitch]="input.controlType">
-        <input *ngSwitchCase="'textbox'" class="form-control" [formControlName]="input.key" [id]="input.key" [type]="input.type" [ngStyle]="input.style">
+        <input *ngSwitchCase="'textbox'" class="form-control" [formControlName]="input.key" [id]="input.key" [type]="input.type" [ngStyle]="input.style" disabled="˘!input.editable">
         
         <textarea *ngSwitchCase="'textarea'" class="form-control" [formControlName]="input.key" [id]="input.key" [cols]="input.cols" [ngStyle]="input.style"
             [rows]="input.rows"></textarea>
