--- a/src/app/gantt-chart/edit-schedule/edit-schedule.component.html
+++ b/src/app/gantt-chart/edit-schedule/edit-schedule.component.html
@@ -1,7 +1,8 @@
-<p-card>
   <div class="d-flex flex-row">
     <div class="p-2">{{entity.description}}</div>
-    <div class="p-2">Makespan: {{entity.log.makespan}}</div>
+    <div class="p-2">Makespan: {{result.makespan}}</div>
+    <div class="p-2">Setup time: {{result.setupTime}}</div>
+    <div class="p-2"># of setups: {{result.numberOfSetups}}</div>
   </div>
 
   <p-table id="jobEditorTable" #dt [columns]="jobCols" [value]="jobs" dataKey="name" selectionMode="single"
@@ -45,4 +46,3 @@
       </tr>
     </ng-template>
   </p-table>
-</p-card>
