Add 'crud-table-lib' library starter
Usage:

ng build crud-table-lib
npm run start

--- a/src/app/administration/administration.component.html
+++ b/src/app/administration/administration.component.html
@@ -47,6 +47,15 @@
     </div>
   </nav>
 
+
+<!-- START OF TEST -->
+
+  <h4>CRUD Table Library Test View</h4>
+  <lib-crud-table-lib></lib-crud-table-lib>
+
+<!-- END OF TEST -->
+
+
   <h1></h1>
 
   <p-card *ngIf="currentSelection == 'project'">
